# reservation-voice-agent

./: .env.example  .gitignore  CLAUDE.md  README.md
apps/dashboard/: next.config.ts  package.json
apps/dashboard/src/app/: layout.tsx  page.tsx
apps/dashboard/src/components/: CallMonitor.tsx
apps/voice-engine/: main.py  pyproject.toml  requirements.txt
apps/voice-engine/src/brain/: __init__.py  gemini_client.py  prompts.py
apps/voice-engine/src/db/: __init__.py  client.py
apps/voice-engine/src/stream/: __init__.py  twilio_handler.py
apps/voice-engine/src/tools/: __init__.py  end_call.py  report_no_availability.py  save_booking.py
apps/voice-engine/tests/: conftest.py  test_e2e_booking_flow.py  test_e2e_end_call.py  test_e2e_errors.py  test_e2e_no_availability.py  test_e2e_websocket.py  test_outbound_call.py
docs/: DATABASE_TOOLCALLING_PLAN.md
infrastructure/docker/: docker-compose.yml  init.sql
infrastructure/terraform/: main.tf
libs/api-contracts/python/: __init__.py  schemas.py
libs/api-contracts/typescript/: package.json  schemas.ts
libs/audio_utils/: __init__.py  transcode.py
